deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shz-deployment
  namespace: default
  labels:
    app: shz-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shz-v1
  template:
    metadata:
      labels:
        app: shz-v1
    spec:
      containers:
      - name: web-app
        image: ghcr.io/thamizh-kumaran-01/shz-app:sha256:8dd818e9148e3127189aa5cb652f8af0dfb0e466ad4d6363f2fb477c98bc06fb
        ports:
        - containerPort: 80
